--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <head>
 	<title>My Portfolio</title>
+	<link rel="icon" type="image/x-icon" href="images\Logo image.jpg">
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
