--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								out</a></li>
 					</ul>
 				</article>
-				<article>
+<!-- 				<article>
 					<header>
 						<span class="date">April 18, 2017</span>
 						<h2><a href="#">Ante mattis<br />
@@ -155,7 +155,7 @@
 					<ul class="actions special">
 						<li><a href="#" class="button">Full Story</a></li>
 					</ul>
-				</article>
+				</article> -->
 			</section>
 
 			<!-- Footer -->
