updated index and images

--- a/index.html
+++ b/index.html
@@ -58,18 +58,106 @@
 			<article class="post featured">
 				<header class="major">
 					<h2><a href="#">I'm Cheryl Fernandes</a></h2>
-					<p>An aspiring data analyst, trying to showcase my skills through hands-on projects</p>
+					<p>An aspiring data engineer, trying to showcase my skills through hands-on projects</p>
 				</header>
-				<a href="https://github.com/cherchub/AdventureWorks-Data-Analysis-Project" class="image main"><img
-						src="images\AdventureWorks image.PNG" alt="" /></a>
+
+				<header>
+					<h2><a href="https://github.com/fernandes-cheryl/Stock-Market-Analysis-Using-Kafka.git">Stock Market
+							Analysis Using Kafka</a></h2></a></h2>
+				</header>
+				<a href="https://github.com/fernandes-cheryl/Stock-Market-Analysis-Using-Kafka.git"
+					class="image main"><img src="images\stock market.png" alt="" /></a>
+
+				<p>This project simulates stock market data and uses Apache Kafka to process and visualize data using
+					QuickSight in real
+					time.</p>
 				<ul class="actions special">
-					<li><a href="https://github.com/cherchub/AdventureWorks-Data-Analysis-Project"
+					<li><a href="https://github.com/fernandes-cheryl/Stock-Market-Analysis-Using-Kafka.git"
 							class="button large">Check it out</a></li>
 				</ul>
 			</article>
 
 			<!-- Posts -->
 			<section class="posts">
+				<!-- start -->
+				<article>
+					<header>
+						<!-- <span class="date">April 24, 2017</span> -->
+						<h2><a href="https://github.com/fernandes-cheryl/Automated-Webscraping-Using-Selenium.git">Automated
+								Webscraping Using Selenium</a></h2></a></h2>
+					</header>
+					<a href="https://github.com/fernandes-cheryl/Automated-Webscraping-Using-Selenium.git"
+						class="image fit"><img src="images\webscraping.png" alt="" /></a>
+					<p>The objective of this project is to automate webscraping for top 10 trending videos on Youtube
+						using Selenium and set up
+						a recurring job to send data via email using python on AWS Lambda.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/fernandes-cheryl/Automated-Webscraping-Using-Selenium.git"
+								class="button">Check
+								it out</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<!-- <span class="date">April 24, 2017</span> -->
+						<h2><a
+								href="https://github.com/fernandes-cheryl/Data-Engineering-Youtube-Trending-Statistics-Analysis.git">Youtube
+								Trending Statistics ETL and Analysis</a></h2></a></h2>
+					</header>
+					<a href="https://github.com/fernandes-cheryl/Data-Engineering-Youtube-Trending-Statistics-Analysis.git"
+						class="image fit"><img src="images\youtube-stats.png" alt="" /></a>
+					<p>The aim of this project is to build an automated ETL pipeline for the Youtube API trending
+						dataset from Kaggle and
+						perform analysis using Quicksight.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/fernandes-cheryl/Data-Engineering-Youtube-Trending-Statistics-Analysis.git"
+								class="button">Check
+								it out</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<!-- <span class="date">April 24, 2017</span> -->
+						<h2><a href="https://github.com/fernandes-cheryl/HR-Dashboard-using-SQL-and-PowerBI.git">HR
+								Dashboard using SQL and PowerBI</a></h2></a></h2>
+					</header>
+					<a href="https://github.com/fernandes-cheryl/HR-Dashboard-using-SQL-and-PowerBI.git"
+						class="image fit"><img src="images\HR Dashboard Screen shot.png" alt="" /></a>
+					<p>The HR dashboard allows Human Resource teams to track, analyze and report on HR KPIs. Built using
+						SQL and Microsoft
+						PowerBI.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/fernandes-cheryl/HR-Dashboard-using-SQL-and-PowerBI.git"
+								class="button">Check
+								it out</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<!-- <span class="date">April 24, 2017</span> -->
+						<h2><a href="https://github.com/fernandes-cheryl/AdventureWorks-Data-Analysis-Project.git">AdventureWorks
+								Data Analysis Dashboard</a></h2></a></h2>
+					</header>
+					<a href="https://github.com/fernandes-cheryl/AdventureWorks-Data-Analysis-Project.git"><img
+							class="image fit" src="images\AdventureWorks.PNG" alt="" /></a>
+					<p>This report is implemented using PowerBI. The database used is AdventureWorks, a global
+						manufacturing company that
+						produces cycling equipment and accessories.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/fernandes-cheryl/AdventureWorks-Data-Analysis-Project.git"
+								class="button">Check
+								it out</a></li>
+					</ul>
+				</article>
+				<!-- end -->
+
+
+
+
+
 				<article>
 					<header>
 						<!-- <span class="date">April 24, 2017</span> -->
@@ -104,7 +192,7 @@
 								out</a></li>
 					</ul>
 				</article>
-<!-- 				<article>
+				<!-- 				<article>
 					<header>
 						<span class="date">April 18, 2017</span>
 						<h2><a href="#">Ante mattis<br />
@@ -179,7 +267,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li>&copy; Untitled</li>
+				<li>&copy; Cheryl</li>
 				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
