--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <html>
 
 <head>
+	<meta http-equiv='cache-control' content='no-cache'>
+	<meta http-equiv='expires' content='0'>
+	<meta http-equiv='pragma' content='no-cache'>
 	<title>My Portfolio</title>
 	<link rel="icon" type="image/x-icon" href="images\Logo image.jpg">
 
